vendor/structopt-0.3.21/tests/ui/structopt_name_value_attr.stderr
error: expected parentheses: #[structopt(...)]
  --> $DIR/structopt_name_value_attr.rs:14:17
   |
14 |     #[structopt = "short"]
   |                 ^
